<resources>
	<string name="app_name">Planet Attack</string>
	<string name="game_speed">Game Speed</string>
	<string name="game_size">Game Size</string>
	<string name="swipe_sensitivity">Swipe Sensitivity</string>
	<string name="show_next_piece">Show Next Piece</string>
	<string name="show_hold_piece">Show Hold Piece</string>
	<string name="reset_data">Reset Data</string>
	<string name="reset_data_summary">Clear scores and erase database.</string>
	<string name="reset_data_toast">Data Reset!</string>
	<string name="play_label">Play Game</string>
	<string name="scores_label">High Scores</string>
	<string name="help_label">How to Play</string>
	<string name="settings_label">Settings</string>
	<string name="pause_label">Pause</string>
	<string name="next_block">Next: </string>
	<string name="hold_block">Hold</string>
	<string name="game_score">Score: </string>
	<string name="game_high_score">Top: </string>
	<string name="new_record">New Record!</string>
	<string name="resume_label">Resume</string>
	<string name="quit_label">Quit</string>
	<string name="help_text">
		Swipe to move piece, tap to rotate.
		Press and hold to drop piece.
		Pieces will reverse direction if they reach the other side of the screen.
		The hold button swaps out the current piece (if enabled in the settings).
		Form a complete ring to clear blocks.
		The game will end if the stack reaches past the edge of the tinted box within the screen.
	</string>
	<string name="help_okay">Okay</string>
	<string name="game_over_label">Game Over!</string>
	<string name="reset_key">reset</string>
	<string name="speed_key">speed</string>
	<string name="size_key">size</string>
	<string name="sensitivity_key">sensitivity</string>
	<string name="next_key">next</string>
	<string name="hold_key">hold</string>
</resources>
