<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<ListPreference
		app:key="@string/speed_key"
		app:title="@string/game_speed"
		app:entries="@array/speed_choices"
		app:entryValues="@array/speed_values"
		app:defaultValue="1"
		app:useSimpleSummaryProvider="true" />

	<ListPreference
		app:key="@string/size_key"
		app:title="@string/game_size"
		app:entries="@array/size_choices"
		app:entryValues="@array/size_values"
		app:defaultValue="2"
		app:useSimpleSummaryProvider="true" />

	<SeekBarPreference
		app:key="@string/sensitivity_key"
		app:title="@string/swipe_sensitivity"
		android:min="1"
		android:max="7"
		app:defaultValue="4" />

	<SwitchPreference
		app:key="@string/next_key"
		app:title="@string/show_next_piece"
		app:defaultValue="true" />

	<SwitchPreference
		app:key="@string/hold_key"
		app:title="@string/show_hold_piece"
		app:defaultValue="false" />

	<Preference
		app:key="@string/reset_key"
		app:title="@string/reset_data"
		app:summary="@string/reset_data_summary" />
</PreferenceScreen>
