<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:gravity="bottom"
    android:padding="16sp"
	tools:context=".ui.MainFragment">

	<Button
		android:id="@+id/play_button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/play_label"
		android:backgroundTint="@color/block_green"
		android:textStyle="bold"
		android:textColor="@color/black"/>

	<Button
		android:id="@+id/scores_button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/scores_label"
		android:backgroundTint="@color/block_yellow"
		android:textStyle="bold"
		android:textColor="@color/black"/>

	<Button
		android:id="@+id/help_button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/help_label"
		android:backgroundTint="@color/block_orange"
		android:textStyle="bold"
		android:textColor="@color/black"/>

	<Button
		android:id="@+id/settings_button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/settings_label"
		android:backgroundTint="@color/block_red"
		android:textStyle="bold"
		android:textColor="@color/black"/>
</LinearLayout>
