<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/nav_graph"
	app:startDestination="@id/mainFragment">

	<fragment
		android:id="@+id/mainFragment"
		android:name="edu.mines.csci448.planetattack.ui.MainFragment"
		android:label="@string/app_name"
		tools:layout="@layout/main_fragment">

		<action
			android:id="@+id/action_mainFragment_to_settingsFragment"
			app:destination="@id/settingsFragment" />
		<action
			android:id="@+id/action_mainFragment_to_gameFragment"
			app:destination="@id/gameFragment" />
		<action
			android:id="@+id/action_mainFragment_to_scoreFragment"
			app:destination="@id/scoreFragment" />
	</fragment>

	<fragment
		android:id="@+id/settingsFragment"
		android:name="edu.mines.csci448.planetattack.ui.settings.SettingsFragment"
		android:label="@string/settings_label" />
	<fragment
		android:id="@+id/gameFragment"
		android:name="edu.mines.csci448.planetattack.ui.game.GameFragment"
		android:label="@string/app_name"
		tools:layout="@layout/fragment_game" />
	<fragment
		android:id="@+id/scoreFragment"
		android:name="edu.mines.csci448.planetattack.ui.highscores.HighscoreFragment"
		android:label="@string/scores_label"
		tools:layout="@layout/fragment_score_list" />
</navigation>
