<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.GameFragment">

	<Button
		android:id="@+id/menu_button"
		android:layout_width="wrap_content"
		android:layout_height="0dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:layout_marginBottom="8dp"
		android:backgroundTint="@color/block_magenta"
		android:text="@string/in_game_menu"
		android:textAppearance="@style/TextAppearance.AppCompat.Large"
		android:textColor="@color/white"
		app:layout_constraintBottom_toTopOf="@+id/game_view"
		app:layout_constraintHeight_max="80dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/next_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:text="@string/next_block"
		android:textAppearance="@style/TextAppearance.AppCompat.Large"
		app:layout_constraintBaseline_toBaselineOf="@+id/menu_button"
		app:layout_constraintEnd_toStartOf="@+id/first_next_image_view" />

	<ImageView
		android:id="@+id/first_next_image_view"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="16dp"
		android:layout_marginBottom="8dp"
		android:contentDescription="@string/next_block"
		android:src="@drawable/block_icon_o"
		app:layout_constraintBottom_toTopOf="@+id/game_view"
		app:layout_constraintDimensionRatio="w,1:2"
		app:layout_constraintEnd_toStartOf="@+id/second_next_image_view"
		app:layout_constraintHeight_max="100dp"
		app:layout_constraintTop_toTopOf="parent" />

	<ImageView
		android:id="@+id/second_next_image_view"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="16dp"
		android:layout_marginBottom="8dp"
		android:contentDescription="@string/next_block"
		android:src="@drawable/block_icon_i"
		app:layout_constraintBottom_toTopOf="@+id/game_view"
		app:layout_constraintDimensionRatio="w,1:2"
		app:layout_constraintEnd_toStartOf="@+id/third_next_image_view"
		app:layout_constraintHeight_max="100dp"
		app:layout_constraintTop_toTopOf="parent" />

	<ImageView
		android:id="@+id/third_next_image_view"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="16dp"
		android:layout_marginBottom="8dp"
		android:contentDescription="@string/next_block"
		android:src="@drawable/block_icon_z"
		app:layout_constraintBottom_toTopOf="@+id/game_view"
		app:layout_constraintDimensionRatio="w,1:2"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHeight_max="100dp"
		app:layout_constraintTop_toTopOf="parent" />

	<SurfaceView
		android:id="@+id/game_view"
		android:layout_width="0dp"
		android:layout_height="0dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintDimensionRatio="H,1:1"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<Button
		android:id="@+id/hold_button"
		android:layout_width="wrap_content"
		android:layout_height="0dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:layout_marginBottom="8dp"
		android:backgroundTint="@color/block_blue"
		android:text="@string/hold_block"
		android:textAppearance="@style/TextAppearance.AppCompat.Large"
		android:textColor="@color/white"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintHeight_max="100dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/game_view" />

	<ImageView
		android:id="@+id/hold_image_view"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_marginStart="16dp"
		android:layout_marginTop="8dp"
		android:layout_marginBottom="8dp"
		android:contentDescription="@string/hold_block"
		android:src="@drawable/block_icon_j"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintDimensionRatio="1:2"
		app:layout_constraintHeight_max="100dp"
		app:layout_constraintStart_toEndOf="@+id/hold_button"
		app:layout_constraintTop_toBottomOf="@+id/game_view" />

	<TextView
		android:id="@+id/score_text_label"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:text="@string/game_score"
		android:textAppearance="@style/TextAppearance.AppCompat.Large"
		app:layout_constraintStart_toEndOf="@+id/hold_image_view"
		app:layout_constraintTop_toBottomOf="@+id/game_view" />

	<TextView
		android:id="@+id/score_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:fontFamily="monospace"
		android:textAppearance="@style/TextAppearance.AppCompat.Large"
		app:layout_constraintBaseline_toBaselineOf="@+id/score_text_label"
		app:layout_constraintStart_toEndOf="@+id/score_text_label"
		tools:text="846200" />

	<TextView
		android:id="@+id/high_score_text_label"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginBottom="8dp"
		android:text="@string/game_high_score"
		android:textAppearance="@style/TextAppearance.AppCompat.Large"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toEndOf="@+id/hold_image_view" />

	<TextView
		android:id="@+id/high_score_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:fontFamily="monospace"
		android:textAppearance="@style/TextAppearance.AppCompat.Large"
		app:layout_constraintBaseline_toBaselineOf="@+id/high_score_text_label"
		app:layout_constraintStart_toEndOf="@+id/high_score_text_label"
		tools:text="3819200" />

	<LinearLayout
		android:id="@+id/menu_overlay"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:alpha="0.67"
		android:background="@color/black"
		android:gravity="center"
		android:orientation="vertical"
		tools:layout_editor_absoluteX="0dp"
		tools:layout_editor_absoluteY="-50dp"
		tools:visibility="invisible">

		<Button
			android:id="@+id/resume_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:backgroundTint="@color/block_green"
			android:text="@string/resume_label"
			android:textAppearance="@style/TextAppearance.AppCompat.Large"
			android:textColor="@color/black"
			android:textStyle="bold" />

		<Button
			android:id="@+id/quit_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:backgroundTint="@color/block_red"
			android:text="@string/quit_label"
			android:textAppearance="@style/TextAppearance.AppCompat.Large"
			android:textColor="@color/black"
			android:textStyle="bold" />

	</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
